--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
          <li> 新增商品: 牛扎糖原味 (袋)、牛扎糖蔓越莓 (袋)、黃魚酥原味(箱)、黃魚酥辣味(箱)</li> 
-        <li> 新增商品: 牛軋餅 (箱)</li>
+        <li> 新增商品: 牛軋餅 (箱)、玥珍軒袋</li>
       </ol>
 
       <!-- 功能按鈕 -->
