新增商品好事花生酥

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-         <li> 新增商品: 花生酥(包)、花生姑娘(包)</li> 
+         <li> 新增商品: 花生酥(包)、花生姑娘(包)、好事花生酥(袋)</li> 
       </ol>
 
       <!-- 功能按鈕 -->
