--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
         <li>
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
-         <li> 新增商品: 開心果(包)</li> 
-         <li> 修改價格: 堅果塔 24 => 27</li> 
+         <li> 修改價格: 魷魚絲(箱) 3173 -> 3298</li> 
       </ol>
 
       <!-- 功能按鈕 -->
