--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           系統只會對有打勾的產品進行金額試算喔！如果不想一個一個選，可以點選『全選』來加快操作～
         </li>
          <li> 修改價格: 魷魚絲(箱) 3173 -> 3298</li> 
+         <li> 修改價格: 南棗核桃糕(箱) 6190 -> 6490</li> 
       </ol>
 
       <!-- 功能按鈕 -->
